@@ -42,6 +42,7 @@ table {
 td {
     padding-left: 1em;
     padding-top: 0.5em;
+}
 
 #location {
 }
